# Hexicord

./: .gitignore  .gitmodules  CMakeLists.txt  DEPS  Doxyfile.in  Info.plist  LICENSE  Makefile  Nodes.xml  README.md  README_8md.html  README_8md_source.html  Tokens.xml  annotated.html  classHexicord_1_1EventDispatcher-members.html  classHexicord_1_1EventDispatcher.html  classHexicord_1_1Flags-members.html  classHexicord_1_1Flags.html  classHexicord_1_1GatewayClient-members.html  classHexicord_1_1GatewayClient.html  classHexicord_1_1InvalidParameter-members.html  classHexicord_1_1InvalidParameter.html  classHexicord_1_1LimitReached-members.html  classHexicord_1_1LimitReached.html  classHexicord_1_1LogicError-members.html  classHexicord_1_1LogicError.html  classHexicord_1_1RESTError-members.html  classHexicord_1_1RESTError.html  classHexicord_1_1RatelimitHit-members.html  classHexicord_1_1RatelimitHit.html  classHexicord_1_1RatelimitLock-members.html  classHexicord_1_1RatelimitLock.html  classHexicord_1_1RestClient-members.html  classHexicord_1_1RestClient.html  classHexicord_1_1RuntimeError-members.html  classHexicord_1_1RuntimeError.html  classHexicord_1_1UnknownEntity-members.html  classHexicord_1_1UnknownEntity.html  classes.html  classstd_1_1hash_3_01Hexicord_1_1Snowflake_01_4-members.html  (+80 more)
cmake/: cmake_cxx11_standard.cmake  doxygen.cmake  external-targets.cmake  version_detect.cmake
examples/: CMakeLists.txt
examples/avatar-stealer/: README.md  avatar-stealer.cpp
examples/echo-bot/: CMakeLists.txt  README.md  echo-bot.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  (+67 more)
src/: bot.cpp
src/hexicord/: beast_rest.cpp  beast_rest.hpp  bot.cpp  bot.hpp  ca_certs.cpp  ca_certs.hpp  client.cpp  client.hpp  config.hpp  config.hpp.in  event_dispatcher.cpp  event_dispatcher.hpp  exceptions.hpp  flag.hpp  gateway_client.cpp  gateway_client.hpp  https.cpp  https.hpp  permission.hpp  ratelimit_lock.cpp  ratelimit_lock.hpp  rest.cpp  rest.hpp  rest_client.cpp  rest_client.hpp  types.hpp  wss.cpp  wss.hpp
src/hexicord/internal/: beast_rest.cpp  beast_rest.hpp  rest.cpp  rest.hpp  utils.cpp  utils.hpp  wss.cpp  wss.hpp  zlib.cpp  zlib.hpp
src/hexicord/types/: file.cpp  file.hpp  image.cpp  image.hpp  snowflake.hpp
